@startuml
package controller {
    class AuthController {
        +resetPassword()
    }
}

package repository {
    class DatabaseRepo {
        +findUserByEmail()
        +updatePassword()
    }
}

package service {
    class EmailService {
        +sendPasswordResetEmail()
    }
}

package entity {
    class User {
        +id: int
        +username: String
        +email: String
        +password: String
    }
}

AuthController --> DatabaseRepo : uses
AuthController --> EmailService : uses
DatabaseRepo --> User : returns
@enduml